more formatting. java command for inline Java/x10 code. scriptsize for figures with code. baselinestretch command for later tweaking.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4532 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -21,6 +21,7 @@
 %\newenvironment{javaen}{\begin{small}\begin{verbatim}}{\end{verbatim}\end{small}}
 \newcommand{\java}{\scriptsize\tt}
 \def\Xten{{\sf X10}}
+\renewcommand{\baselinestretch}{1.0}
 
 \begin{document}
 
