--- a/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -21,6 +21,7 @@
 %\newenvironment{javaen}{\begin{small}\begin{verbatim}}{\end{verbatim}\end{small}}
 \newcommand{\java}{\scriptsize\tt}
 \def\Xten{{\sf X10}}
+\renewcommand{\baselinestretch}{1.0}
 
 \begin{document}
 
