--- a/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
+++ b/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
@@ -48,20 +48,23 @@ To achieve good load-balancing, a processor checks for non-empty stack/queue on 
 
 X10 allows expressing the essential parallelism in the algorithm in a very concise and elegant way. Alg.~\ref{alg:st-x10} is a recursive algorithm that traverses the graph and computes a spanning tree. It looks very much like the recursive sequential DFS. The few important differences include creating parallel activities and lock-free synchronization.  
 \begin{algorithm}
+\centering
+\scriptsize
+\begin{minipage}{0.5\textwidth}
 \begin{verbatim} 
-   void traverse(int u) {
-        int k,v;
-        finish for(k=0;k<G[u].degree;k++)
-        {
-            v=G[u].neighbors[k];
-            if(color[v].compareAndSet(0,1)) {
-                G[v].parent=u;
-                final int V=v;
-                async traverse(V);
-            }
-        }
-   }
+  void traverse(int u) {
+    int k,v;
+    finish for(k=0;k<G[u].degree;k++) {
+      v=G[u].neighbors[k];
+      if(color[v].compareAndSet(0,1)) {
+        G[v].parent=u;
+        final int V=v;
+        async traverse(V);
+      }
+    }
+  }
 \end{verbatim}
+\end{minipage}
 \caption{A spanning tree algorithm on an SMP node in X10}
 \label{alg:st-x10}
 \end{algorithm}
@@ -75,27 +78,31 @@ A similar algorithm can also be expressed using Cilk. However, the X10 runtime s
 \label{s:trav-dist}
 
  When the target system is of NUMA architecture, or even a cluster of SMPs, X10 provides constructs that can easily transform Alg.~\ref{alg:st-x10} to take advantage of memory affinity . Alg.~\ref{alg:st-dist-x10} computes a spanning tree for a graph distributed on multiple nodes. In Alg.~\ref{alg:st-dist-x10}, again \emph{async} creates parallel activities. Compared with Alg.~\ref{alg:st-x10}, here \emph{async} takes the parameter of the distribution of a vertex $v$, and creates a traversal activity on a node that owns vertex $v$ so that the activity accesses data mostly on that node. Note that the activity can be created on a remote node. Obviously complex scheduling and synchronization support are necessary for fast execution of Alg.~\ref{alg:st-dist-x10}.
- 
+
 \begin{algorithm}
+\centering
+\scriptsize
+\begin{minipage}{0.5\textwidth}
 \begin{verbatim} 
-        void traverse(int u) {
-            int k,v;
-            finish for(k=0;k<G[u].degree;k++)
-            {
-                    v=G[u].neighbors[k];
-                    if(color[v]==0) {
-                            color[v]=1;
-                            final int U=u, V=v;
-                            async (G.distribution[v]){
-                                    G[V].parent=U;
-                                    traverse(V);
-                            }
-                    }
-            }
+  void traverse(int u) {
+    int k,v;
+    finish for(k=0;k<G[u].degree;k++) {
+      v=G[u].neighbors[k];
+      if(color[v]==0) {
+        color[v]=1;
+        final int U=u, V=v;
+        async (G.distribution[v]){
+          G[V].parent=U;
+          traverse(V);
         }
+      }
+    }
+  }
 \end{verbatim}
+\end{minipage}
 \caption{A spanning tree algorithm on a cluster of SMPs in X10}
 \label{alg:st-dist-x10}
 \end{algorithm}
+
 
 
