--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -16,11 +16,14 @@
 \usepackage{enumerate, amscd,  amsmath}  
 \usepackage{amssymb}
 \usepackage{algorithm2e}
+\usepackage{url}
 \numberwithin{equation}{section}
 
 %\newenvironment{javaen}{\begin{small}\begin{verbatim}}{\end{verbatim}\end{small}}
 \newcommand{\java}{\scriptsize\tt}
 \def\Xten{{\sf X10}}
+\def\XWS{{\sf XWS}}
+
 \renewcommand{\baselinestretch}{1.0}
 
 \begin{document}
@@ -60,7 +63,7 @@ krishnsr@cse.ohio-state.edu
 \input runtime
 
 \bibliographystyle{ieee}
-\bibliography{IPDPS08_X10WS}
+\bibliography{IPDPS08_X10WS,parallel}
 
 \end{document}
 
