Added conclusion, combined local var decl with initialization
git-svn-id: svn://svn.code.sf.net/p/x10/code@4536 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
@@ -84,9 +84,8 @@ A similar algorithm can also be expressed using Cilk. However, the \Xten{} runti
 \begin{minipage}{0.5\textwidth}
 \begin{verbatim} 
   void traverse(int u) {
-    int k,v;
-    finish for(k=0;k<G[u].degree;k++) {
-      v=G[u].neighbors[k];
+    finish for(int k=0;k<G[u].degree;k++) {
+      int v=G[u].neighbors[k];
       if(color[v]==0) {
         color[v]=1;
         final int U=u, V=v;
