*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/x10/code@4537 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -61,6 +61,7 @@ krishnsr@cse.ohio-state.edu
 
 \input x10graphdesign
 \input runtime
+\input perf-eval
 \input conclusion
 \bibliographystyle{ieee}
 \bibliography{IPDPS08_X10WS,parallel}
