*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/x10/code@4539 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/conclusion.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/conclusion.tex
@@ -1,3 +1,3 @@
-\section{Conclusion}
+\section{Conclusion}\label{s:concl}
 
 \paragraph{Acknowledgements.} \XWS{} is being designed and implemented in collabration with Doug Lea. We thank Raj Barik for his contributions to the implementation of the C++ version of \XWS. We thank the rest of the X10 team for many discussions of these issues.
