--- a/trunk/x10.runtime.cws/paper/IPDPS08/perf-eval.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/perf-eval.tex
@@ -1,4 +1,4 @@
-\section{Performance Evaluation}\label{s:perf-eval}
+\section{Performance Evaluation}\label{s:results}
 
 \begin{figure}
  \begin{tabular}{cc}
